# MathBending

./: .gitignore  CMakeLists.txt
include/MathBending/: random.hpp
include/MathBending/concepts/: ScalarTypes.hpp
include/MathBending/functions/: BitShifts.hpp
include/MathBending/random/: MersenneTwister.hpp
include/MathBending/util/: CircularArray.hpp  Integer128.hpp
test/: CMakeLists.txt  bitShift_test.cpp  integer128_test.cpp  random_test.cpp
